--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "greenlock": "^2.8.2",
-    "greenlock-store-fs": "^3.0.2",
+    "greenlock": "2.8.2",
+    "greenlock-store-fs": "3.0.2",
     "http-proxy": "^1.17.0",
     "koa": "latest",
     "koa-mount": "^4.0.0",
     "koa-power": "^1.2.0",
     "koa-send": "^5.0.0",
     "koa-static": "^5.0.0",
-    "le-challenge-fs": "^2.0.9",
+    "le-challenge-fs": "2.0.9",
     "native-dns-packet": "^0.1.1",
     "parseurl": "^1.3.3",
     "react-icons": "^3.7.0",
