--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@greenlock/manager": "^3.1.0",
+    "acme-http-01-webroot": "^3.0.0",
     "express": "^4.17.1",
     "greenlock": "^4.0.4",
     "greenlock-store-fs": "^3.2.2",
@@ -20,7 +21,6 @@
     "koa-power": "^1.2.0",
     "koa-send": "^5.0.0",
     "koa-static": "^5.0.0",
-    "le-challenge-fs": "2.0.9",
     "native-dns-packet": "^0.1.1",
     "parseurl": "^1.3.3",
     "validator": "^13.5.2",
