--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@greenlock/manager": "^3.1.0",
+    "@root/greenlock": "v4",
     "acme-http-01-webroot": "^3.0.0",
     "express": "^4.17.1",
     "greenlock": "^4.0.4",
